societal-discussion/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: manipulative-ai-2
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
