societal-discussion/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: manipulative-ai-2
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
