societal-discussion/k8s/api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: manipulative-ai-2
spec:
  host: api-vaalikeskustelu.2.rahtiapp.fi
  to:
    kind: Service
    name: api
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
