societal-discussion/k8s/web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  namespace: manipulative-ai-2
spec:
  host: vaalikeskustelu.2.rahtiapp.fi
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
